# object_perception

./: .gitingnore  .hgignore  CMakeLists.txt  Makefile  ayum.txt  cloud_cluster_0.pcd  cloud_cluster_0.vfh.pcd  cloud_cluster_1.pcd  cloud_cluster_1.vfh.pcd  cloud_cluster_2.pcd  cloud_cluster_2.vfh.pcd  cloud_cluster_3.pcd  cloud_cluster_3.vfh.pcd  cloud_cluster_4.pcd  cloud_cluster_4.vfh.pcd  cloud_cluster_5.pcd  cloud_cluster_5.vfh.pcd  cloud_cluster_6.pcd  cloud_cluster_6.vfh.pcd  cloud_cluster_7.pcd  cloud_cluster_7.vfh.pcd  cloud_cluster_8.pcd  cloud_cluster_8.vfh.pcd  cloud_cluster_9.pcd  cloud_cluster_9.vfh.pcd  cmake_install.cmake  coke.txt  est.txt  fantaG.txt  fantaR  fantaR.txt  kodo.h5  kodo.idx  kodo.list  ligo.txt  lipton.txt  malee1.txt  malee2.txt  manifest.xml  milo.txt  (+22 more)
object_recognition/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
object_recognition/config/: result_threshold.txt
object_recognition/data/axe/: features.txt
object_recognition/data/blaster/: features.txt
object_recognition/data/colgate/: features.txt
object_recognition/data/est/: features.txt
object_recognition/data/fanta_green/: features.txt
object_recognition/data/fanta_red/: features.txt
object_recognition/data/hokuyo/: features.txt
object_recognition/data/jeedjard/: features.txt
object_recognition/data/kewpie/: features.txt
object_recognition/data/knorr/: features.txt
object_recognition/data/lactasoy/: features.txt
object_recognition/data/lays/: features.txt
object_recognition/data/loreal/: features.txt
object_recognition/data/malee/: features.txt
object_recognition/data/meter/: features.txt
object_recognition/data/milo/: features.txt
object_recognition/data/minute_maid/: features.txt
object_recognition/data/nescafe/: features.txt
object_recognition/data/pringles/: features.txt
object_recognition/data/quick/: features.txt
object_recognition/data/redondo/: features.txt
object_recognition/data/silicone/: features.txt
object_recognition/data/sunlight/: features.txt
object_recognition/data/vaseline/: features.txt
object_recognition/data/wd/: features.txt
object_recognition/launch/: click_object.launch  findingCenter.launch  image_view.launch  object_recognition.launch  object_recognition_old.launch  search_object.launch  search_object_all.launch  search_object_snack_and_drink.launch  train_object.launch  tune_cropped.launch  verify_object_service.launch
object_recognition/learn/: extractFolder.py  extractSURF  extractSURF.cpp  os  writeObjectOrder.py
object_recognition/learn/LocalizationTrain/: 10.test  10.train  13.test  15.test  15.train  15.train_kinect  3.test  tmp_15.train
object_recognition/learn/PicCut/blaster/: frame0020.txt  frame0021.txt  frame0022.txt  frame0023.txt  frame0026.txt  frame0028.txt  frame0029.txt  frame0030.txt  frame0031.txt  frame0032.txt  frame0034.txt  frame0036.txt
object_recognition/learn/PicCut/colgate/: frame0021.txt  frame0022.txt  frame0026.txt  frame0028.txt  frame0030.txt  frame0033.txt  frame0034.txt  frame0036.txt  frame0039.txt
object_recognition/learn/PicCut/fanta_green/: frame0020.txt  frame0021.txt  frame0022.txt  frame0023.txt  frame0026.txt  frame0027.txt  frame0032.txt  frame0033.txt  frame0034.txt  frame0035.txt  frame0039.txt  frame0040.txt
object_recognition/learn/PicCut/knorr/: frame0020.txt  frame0022.txt  frame0024.txt  frame0026.txt  frame0027.txt  frame0028.txt  frame0029.txt  frame0032.txt  frame0033.txt  frame0035.txt  frame0036.txt  frame0037.txt  frame0040.txt
object_recognition/learn/PicCut/lactasoy/: frame0020.txt  frame0021.txt  frame0022.txt  frame0024.txt  frame0026.txt  frame0027.txt  frame0028.txt  frame0029.txt  frame0032.txt  frame0033.txt  frame0034.txt  frame0035.txt  frame0036.txt  frame0037.txt  frame0040.txt
object_recognition/learn/PicCut/loreal/: frame0020.txt  frame0022.txt  frame0024.txt  frame0025.txt  frame0027.txt  frame0029.txt  frame0030.txt  frame0031.txt  frame0032.txt  frame0033.txt  frame0035.txt  frame0040.txt
object_recognition/learn/PicCut/meter/: frame0022.txt  frame0027.txt  frame0028.txt  frame0029.txt  frame0030.txt  frame0031.txt  frame0032.txt  frame0035.txt  frame0038.txt  frame0039.txt  frame0040.txt
object_recognition/learn/PicCut/milo/: frame0021.txt  frame0023.txt  frame0024.txt  frame0026.txt  frame0027.txt  frame0029.txt  frame0031.txt  frame0032.txt  frame0034.txt  frame0038.txt
object_recognition/learn/PicCut/minute_maid/: frame0020.txt  (+16 more)
object_recognition/msg/: Object.msg  ObjectContainer.msg
object_recognition/nodes/: find_eps.py  find_variable_threshold.py  find_variable_thresold.py  find_variable_thresold_tmp.py  objectRecognitionNaiveBayes.py  object_recognition_unknown.py  plot_dbscan.py  recognizeObject.py  testObject.py  test_classify_object.py  test_verify_object.py  trainObject.py  train_object.py  verify_object_service.py
object_recognition/src/: click_object.cpp  click_object_tmp.cpp  drawKeypoints.cpp  drawKeypointsAll.cpp  drawKeypointsArch.cpp  extractSURF.cpp  findingCenter.cpp  findingCenterTest.cpp  image_view.cpp  tune_cropped.cpp  verify_object.cpp
object_recognition/srv/: Recognize.srv  classifyObject.srv  findObject.srv  verifyObject.srv
tabletop/: CMakeLists.txt  package.xml
tabletop/include/: marker_generator.h
tabletop/include/tabletop/: exhaustive_fit_detector.h  icp_registration_fitter.h  iterative_distance_fitter.h  marker_generator.h  model_fitter.h
tabletop/launch/: tabletop.launch  tabletop_complete.launch  tabletop_object_detection.launch  tabletop_object_recognition.launch  tabletop_segmentation.launch
tabletop/msg/: ObjectDetection.msg  TabletopDetectionResult.msg
tabletop/src/: marker_generator.cpp  model_fitter.cpp  ping_tabletop_node.cpp  ping_tabletop_segmentation.cpp  publish_database_object.cpp  shelf_segmentation.cpp  tabletop_complete_node.cpp  tabletop_object_detection.cpp  tabletop_object_recognition.cpp  tabletop_segmentation.cpp
tabletop/srv/: TabletopObjectDetection.srv  TabletopSegmentation.srv
(+2565 files in other folders)
